--- a/demo/pubspec.yaml
+++ b/demo/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   carousel_slider: ^4.2.1
+  sqflite: ^2.3.2
+  provider: ^6.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
